packages/fortifier-macros-tests/tests/validations/length/unknown_fail.rs
use fortifier::Validate;

#[derive(Validate)]
struct LengthData<'a> {
    #[validate(length(unknown = 2))]
    value: &'a str,
}

fn main() {}
